# oppie

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
oppie/: __init__.py  artifacts.py  config.py  engine.py  events.py  instance.py  intent.py  logging.py  run_log.py  session.py  sync.py
oppie/ask/: __init__.py  engine.py
oppie/cli/: __init__.py  console.py  extras.py  provider_setup.py  render.py
oppie/cli/commands/: amend.py  apply.py  config_cmd.py  context.py  health.py  history.py  init.py  prompt.py  repair.py  show.py  state.py  sync.py
oppie/health/: __init__.py  checks.py  repair.py
oppie/llm/: __init__.py  _sse.py  anthropic.py  base.py  openai_compatible.py
oppie/models/: __init__.py  apply.py  capabilities.py  drift.py  operation.py  plan.py  plan_engine.py  sync.py  ticket.py
oppie/plan/: __init__.py  engine.py  fallback.py  persistence.py  preflight.py  schema.py
oppie/prompt/: __init__.py  helpers.py
oppie/prompts/: __init__.py  builder.py  formatting.py  plan.py
oppie/prompts/text/: __init__.py  ask.py  plan.py
oppie/providers/: base.py  factory.py  local.py
oppie/providers/linear/: __init__.py  config.py  discovery.py  provider.py
oppie/providers/local/: __init__.py  provider.py
oppie/tools/: __init__.py  base.py  operations.py  tickets.py
scripts/: check_pr_severity.py
tests/: conftest.py  helpers.py  test_apply_engine.py  test_artifacts.py  test_config.py  test_drift.py  test_health.py  test_instance.py  test_plan_engine.py  test_run_log.py  test_session.py
tests/apply_engine/: conftest.py  test_check.py  test_execute.py
tests/artifacts/: conftest.py  test_list.py  test_save.py
tests/ask/: test_engine.py
tests/cli/: conftest.py  test_amend.py  test_apply.py  test_config.py  test_context.py  test_extras.py  test_health.py  test_history.py  test_init.py  test_integration.py  test_logging.py  test_prompt.py  test_provider_setup.py  test_render.py  test_repair.py  test_show.py  test_state.py  test_sync.py  test_version.py
tests/config/: conftest.py  test_enums.py  test_models.py  test_save.py  test_validation.py  test_yaml_loading.py
tests/drift/: conftest.py  test_check.py  test_properties.py  test_serialization.py
tests/engine/: test_events.py  test_run_engine.py
tests/instance/: conftest.py  test_create.py  test_detect.py  test_load.py  test_marker.py
tests/intent/: test_classify.py  test_classify_llm.py
tests/llm/: test_anthropic.py  test_anthropic_stream.py  test_base.py  test_factory.py  test_lazy_imports.py  test_openai_compatible.py  test_openai_stream.py  test_sse.py
tests/models/: test_apply.py  test_capabilities.py  test_drift.py  test_operation.py  test_plan.py  test_sync.py  test_ticket.py
tests/plan_engine/: conftest.py  test_capabilities.py  test_context.py  test_fallback.py  test_generate.py  test_persistence.py  test_preflight.py  test_retry_loop.py  test_similar_plans.py
tests/prompt/: test_helpers.py
tests/prompts/: test_ask.py  test_builder.py  test_helpers.py  test_plan.py
tests/providers/: test_base.py  test_factory.py  test_local.py
tests/providers/linear/: conftest.py  test_apply.py  test_config.py  test_delegation.py  test_discovery.py  test_outbox.py  test_sync.py
tests/providers/local/: conftest.py  test_create.py  test_delete.py  test_edges.py  test_list.py  test_read.py  test_search.py  test_update.py  test_upsert.py
tests/sync/: test_auto_sync.py
tests/tools/: test_base.py  test_operations.py  test_tickets.py
