[project]
name = "oppie"
version = "0.0.1"
description = "Project management operations CLI with a plan/apply workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
llm = ["httpx>=0.28.1"]
tui = ["textual>=8.1.1"]
all = ["oppie[llm]", "oppie[tui]"]

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
oppie = "oppie:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["oppie"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"
update_changelog_on_bump = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=oppie --cov-report=term-missing"
