[project]
name = "oppie"
version = "0.1.2"
description = "Project management operations CLI with a plan/apply workflow"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ethan Fuerst", email = "ethanfuerst@gmail.com" }]
keywords = ["cli", "project-management", "linear", "llm", "plan-apply"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.3.1",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=13.0.0",
]

[project.optional-dependencies]
linear = ["httpx>=0.28.1"]
openai = ["httpx>=0.28.1"]
anthropic = ["httpx>=0.28.1"]
all = ["oppie[linear]", "oppie[openai]", "oppie[anthropic]"]

[project.urls]
Homepage = "https://github.com/ethanfuerst/oppie"
Issues = "https://github.com/ethanfuerst/oppie/issues"

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
oppie = "oppie.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["oppie"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
version_files = [
    "pyproject.toml:^version",
    "oppie/__init__.py:^__version__",
]
tag_format = "v$version"
update_changelog_on_bump = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=oppie --cov-report=term-missing"
